--- a/second.html
+++ b/second.html
@@ -21,6 +21,8 @@
         <button>На главную</button>
       </a>
     </div>
-
+    
+    <marquee behavior="alternate" scrollamount="40"  direction="right"> <img src="./img/soap.png" /> </marquee>
+  
   </body>
 </html>
