--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
         <a href="second.html">
           <button>Подробнее</button>
         </a>
-      </div> 
-       
+      </div>
     </div>
+
+    <marquee behavior="alternate" scrollamount="30"  direction="right"> <img src="./img/add.png" /> </marquee>
+
   </body>
 </html>
